refactor: split GameLauncher into focused classes + fix SettingsManager NPE
GameLauncher (558 lines) decomposed by composition into three
single-responsibility classes under com.minelauncher.launcher:

  * LibraryVerifier  — SHA1 verification with sidecar marker cache
                       (CRIT-5), missing-library download, and
                       classpath construction.
  * NativesExtractor — .so/.dll/.dylib extraction with mtime-based
                       marker cache (HIGH-10) and Zip Slip guard.
  * ProcessSpawner    — ProcessBuilder start, daemon log thread,
                       active-process set, kill/killAll/isRunning,
                       and shutdown hook registration (HIGH-11).

GameLauncher keeps orchestration only: resolveVersionId,
resolveJavaPath, buildLaunchArgs, buildPlaceholders,
replacePlaceholders, resolveGameDir, and resolveJavaPath.
Public API preserved (launch/resolveVersionId/killGame/kill/
killAll/isRunning/registerShutdownHook), so GameLaunchService,
WindowService, MainController, LauncherModule, and the test
suite required no changes.

Bonus: private getOSKey() wrapper removed — now uses
PlatformUtil.getOSKey() directly.

Also fix SettingsManager NPE on startup: GSON and ACCOUNTS_TYPE
were declared AFTER INSTANCE, so when the singleton constructor
called load() the static GSON field was still null (Java
initializes static fields in textual order — JLS §12.4.1).
Reordered with explanatory comment to prevent regression.

Verified: mvn compile clean; mvn test 119/119 passing.